WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
243517
scrollIntoView() does not work on option elements
https://bugs.webkit.org/show_bug.cgi?id=243517
Summary
scrollIntoView() does not work on option elements
Ahmad Saleem
Reported
2022-08-03 15:44:19 PDT
Hi Team, Came across another interesting test case from Mozilla Bugzilla, where Safari 15.6 is failing similar to Firefox but Chrome is showing desired behavior. Test Case (Changed into JSFiddle) -
https://jsfiddle.net/5zuhsp24/show
Test Case (from Mozilla Bug) -
https://bug1389779.bmoattachments.org/attachment.cgi?id=8896610
Mozilla Bug -
https://bugzilla.mozilla.org/show_bug.cgi?id=1389779
___ STEPS TO REPRODUCE: 1) Open JSFiddle & Run EXPECTED RESULTS: In "Bug" Select, you should see text "I'm visible" similar to other like "workaround" ACTUAL RESULT: "I'm visible" is not showing up in scrollIntoView() ** Other Browsers ** Firefox Nightly 105 - Bug exists and it is same as Safari 15.6 Chrome Canary 106 - Bug does not exist and both "scrollIntoView()" and "workaround" show "I'm visible" text. ___ I think fixing this would be great so "no" workarounds are required. Thanks for your continuous support.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-08-10 15:45:16 PDT
<
rdar://problem/98475444
>
Karl Dubost
Comment 2
2022-08-17 00:50:55 PDT
seeAlso
https://bugzilla.mozilla.org/show_bug.cgi?id=1389779
Simon Fraser (smfr)
Comment 3
2022-08-17 22:22:57 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/3438
EWS
Comment 4
2022-08-19 00:06:19 PDT
Committed
253585@main
(98069e5b6777): <
https://commits.webkit.org/253585@main
> Reviewed commits have been landed. Closing PR #3438 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug